--- a/ToDo/Properties/launchSettings.json
+++ b/ToDo/Properties/launchSettings.json
@@ -12,11 +12,12 @@
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "todoitems",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7159;http://localhost:5097"
+      "applicationUrl": "https://localhost:5050;http://localhost:5000"
     },
     "IIS Express": {
       "commandName": "IISExpress",
